Fix ComplyAdvantage integration add nationality
Issue was raised that ComplyAdvantage should include nationality (known
as country_codes on their side).

Correct entries are 2 letter codes representing a nationality

https://app.clubhouse.io/passfort/story/17090/complyadvantage-integration-bug

--- a/comply_advantage/Pipfile
+++ b/comply_advantage/Pipfile
@@ -11,9 +11,13 @@ datadog = "*"
 gunicorn = "==19.5.0"
 flask = "==0.12.1"
 requests = "*"
-raven = {extras = ["flask"]}
 mock = "*"
 coverage = "*"
 codecov = "*"
 responses = "==0.9.0"
 schematics = "*"
+pycountry = "*"
+simplejson = "*"
+
+[packages.raven]
+extras = [ "flask",]
