Implement basic check logic and demo results

--- a/reference_integration/static/config.json
+++ b/reference_integration/static/config.json
@@ -8,6 +8,9 @@
     "supports_reselling": true,
     "maximum_cost": 200
   },
+  "supported_countries": [
+    "GBR", "USA", "CAN", "NLD"
+  ],
   "credentials": {
     "fields": [
       {
