Fix Sentry integration
The old configuration routes every requests via a proxy, which may not
be recognised by the client used in Sentry's SDK. Setting the proxy
route and limiting it to only the Cifas Client (the only thing that
needs the proxy) hopefully will fix it.

--- a/cifas/deployment.yaml
+++ b/cifas/deployment.yaml
@@ -32,7 +32,7 @@ spec:
           value: {cluster}
         - name: SENTRY_URL
           value: {sentry_url}
-        - name: HTTPS_PROXY
+        - name: CIFAS_HTTPS_PROXY
           valueFrom:
             secretKeyRef:
               name: webhooks
