--- a/creditsafe/Dockerfile
+++ b/creditsafe/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.7.4-alpine3.10
+FROM python:3.7-alpine3.10
 
 ENV LANG=en_US.UTF-8 \
     LANGUAGE=en_US:en \
@@ -7,6 +7,8 @@ ENV LANG=en_US.UTF-8 \
 EXPOSE 8001
 
 WORKDIR /src
+
+RUN apk --no-cache upgrade
 
 RUN apk add --no-cache make openssh-client git gcc musl-dev
 
