--- a/equifax_au/Dockerfile
+++ b/equifax_au/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.7.4-alpine3.10
+FROM python:3.7-alpine3.10
 
 ENV LANG=en_US.UTF-8 \
     LANGUAGE=en_US:en \
@@ -8,6 +8,7 @@ EXPOSE 8001
 
 WORKDIR /app
 
+RUN apk --no-cache upgrade
 RUN apk add --no-cache make libxslt gcc musl-dev libxslt-dev openssh-client git
 COPY Pipfile Pipfile.lock /app/
 
