--- a/iovation/Dockerfile
+++ b/iovation/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.7.4-alpine3.10
+FROM python:3.7-alpine3.10
 
 ENV LANG=en_US.UTF-8 \
     LANGUAGE=en_US:en \
@@ -8,6 +8,7 @@ EXPOSE 8001
 
 WORKDIR /src
 
+RUN apk --no-cache upgrade
 RUN apk add --no-cache make openssh-client git 
 COPY Pipfile Pipfile.lock Makefile /src/
 
