--- a/worldcheck/Pipfile
+++ b/worldcheck/Pipfile
@@ -11,13 +11,14 @@ datadog = "*"
 freezegun = "*"
 mock = "*"
 gunicorn = "==19.5.0"
-Flask = "==1.1.1"
+flask = "==0.12.1"
 schematics = "*"
 requests = "*"
 raven = {extras = ["flask"]}
 pycountry="*"
 python-json-logger = "*"
-swagger-client = {git = "git@github.com:PassFort/python-worldcheck-client.git@997ffa71befba2e176be87f13dac33189be57090", editable=true}
+swagger-client = {git = "ssh://git@github.com/PassFort/python-worldcheck-client.git", ref="997ffa71befba2e176be87f13dac33189be57090", editable=true}
 coverage = "*"
 codecov = "*"
 markupsafe = "==1.1.1"
+Werkzeug = "==0.16.1"
