Reformat codecov.yml to fix incremental coverage
Set `max_report_age: false` rather than `off`, this seems to be an
error in the documentation.

We also unindent the `flags` key, it seems this was never correct, it
was causing `max_report_age` to be ignored as CodeCov discards the whole
YAML file if it's incorrectly structured.

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,25 +1,25 @@
 codecov:
-  max_report_age: off
+  max_report_age: false
   archive:
     uploads: false
 
-  flags:
-    # filter the folder(s) you wish to measure by that flag
-    bvd:
-      paths:
-        - bvd/
-    comply_advantage:
-      paths:
-        - comply_advantage/
-    duedil:
-      paths:
-        - duedil/
-    onfido:
-      paths:
-        - onfido/
-    worldcheck:
-      paths:
-        - worldcheck/
-    dowjones_watchlist_api
-      paths:
-        - dowjones_watchlist_api/
+flags:
+  # filter the folder(s) you wish to measure by that flag
+  bvd:
+    paths:
+      - bvd/
+  comply_advantage:
+    paths:
+      - comply_advantage/
+  duedil:
+    paths:
+      - duedil/
+  onfido:
+    paths:
+      - onfido/
+  worldcheck:
+    paths:
+      - worldcheck/
+  dowjones_watchlist_api:
+    paths:
+      - dowjones_watchlist_api/
