Publish EKYC reference integration and update README
Add git subtree split step to CI for the eKYC reference integration, and
add a paragraph to the main README pointing out that these two
directories will end up partially public, visible to any integration
partners to whom we grant access.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -824,6 +824,14 @@ workflows:
               branches:
                 ignore:
                   - master
+      - mirror_public_repo:
+          name: mirror_reference_public_repo
+          package: reference_integration
+          repo: git@github.com:PassFort/identity-reference-integration
+          filters:
+            branches:
+              only:
+                - master
 
   docver_reference_integration:
     when: << pipeline.parameters.docver_reference_integration >>
