Update readiness endpoint

--- a/gdc_worldview/deployment.yaml
+++ b/gdc_worldview/deployment.yaml
@@ -34,7 +34,7 @@ spec:
           value: {sentry_url}
         readinessProbe:
           httpGet:
-            path: '/health'
+            path: '/health-check'
             port: 8001
 
 ---
