add demo response

--- a/mastercard_match/Dockerfile
+++ b/mastercard_match/Dockerfile
@@ -19,7 +19,7 @@ RUN pip install pipenv \
 COPY main.py /src
 COPY coverage /src
 COPY app /src/app
-COPY mock_data /src/mock_data
+COPY demo_data /src/demo_data
 COPY test_data /src/test_data
 
 EXPOSE 8001
