--- a/creditsafe/Pipfile
+++ b/creditsafe/Pipfile
@@ -11,7 +11,7 @@ requests = "*"
 pycountry = "*"
 gunicorn = "*"
 coverage = "*"
-codecov = "*"
+codecov = "==2.1.8"
 schematics = "*"
 responses = "*"
 nameparser = "*"
