--- a/trulioo/Dockerfile
+++ b/trulioo/Dockerfile
@@ -6,12 +6,12 @@ ENV LANG=en_US.UTF-8 \
 
 EXPOSE 8001
 
-WORKDIR /app
+WORKDIR /src
 
 RUN apk --no-cache upgrade
 
 RUN apk add --no-cache make openssh-client git 
-COPY Pipfile Pipfile.lock Makefile /app/
+COPY Pipfile Pipfile.lock Makefile /src/
 
 ENV FLASK_APP="app"
 
@@ -19,6 +19,6 @@ RUN pip install pipenv \
     && pipenv install \
     && apk del --no-cache git openssh-client
 
-COPY . /app
+COPY . /src
 
 CMD pipenv run gunicorn -w 4 -t 120 -b 0.0.0.0:8001 --log-level info --access-logfile - --access-logformat="%(h)s %(t)s %(r)s %(s)s" --enable-stdio-inheritance main:app
