--- a/codecov.yml
+++ b/codecov.yml
@@ -3,11 +3,19 @@ codecov:
   archive:
     uploads: false
 
+comment:
+  show_carryforward_flags: true
+  layout: "diff, flags, files"
+
 flags:
   # filter the folder(s) you wish to measure by that flag
   bvd:
     paths:
       - bvd/
+    carryforward: true
+  bvd_v4:
+    paths:
+      - bvd_v4/
     carryforward: true
   cifas:
     paths:
@@ -48,6 +56,10 @@ flags:
   lexisnexis_id:
     paths:
       - lexisnexis_id/
+    carryforward: true
+  loqate:
+    paths:
+      - loqate/
     carryforward: true
   mastercard_match:
     paths:
