--- a/creditsafe/deployment.yaml
+++ b/creditsafe/deployment.yaml
@@ -32,6 +32,12 @@ spec:
           value: {cluster}
         - name: SENTRY_URL
           value: {sentry_url}
+        - name: STATSD_HOST_IP
+          valueFrom:
+            fieldRef:
+              fieldPath: status.hostIP
+        - name: STATSD_HOST_PORT
+          value: "8125"
         readinessProbe:
           httpGet:
             path: '/health'
