--- a/bvd_v4/Pipfile
+++ b/bvd_v4/Pipfile
@@ -16,4 +16,4 @@ python-dateutil = "*"
 pycountry = "*"
 requests = "*"
 raven = {extras = ["flask"]}
-schematics = "==2.1.0'
+schematics = "==2.1.0"
