Fix bvd v4 integration error handling
- Update to return when we get an error, otherwise we get a 'provider
  response did not match expectation' error in addition to the original
error
- Also send specific error message for provider rate limit exceeded
  error
- Updated pipfile to get working version of responses library for
  e2e tests

--- a/bvd_v4/Pipfile
+++ b/bvd_v4/Pipfile
@@ -1,5 +1,6 @@
 [[source]]
-url = "https://pypi.python.org/simple"
+name = "pypi"
+url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
@@ -8,12 +9,13 @@ mypy = "==0.511"
 [packages]
 coverage = "*"
 codecov = "*"
-flask = "==0.12.5"
+flask = "*"
 gunicorn = "==19.5.0"
 mock = "*"
 python-json-logger = "*"
 python-dateutil = "*"
 pycountry = "*"
+responses = "*"
 requests = "*"
 raven = {extras = ["flask"]}
 schematics = "==2.1.0"
