--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,3 +4,6 @@ codecov==2.0.15
 requests-flask-adapter==0.0.5
 requests-http-signature==0.1.0
 requests==2.22.0
+black==22.12.0
+isort==5.11.4
+flake8==6.0.0
