Company Data Ref - Add support for the external resources feature
https://www.notion.so/passfort/Technical-Output-Doc-af4a1fb388fc4e0e910b1826b64c1321

--- a/static/config.one-time-sync.json
+++ b/static/config.one-time-sync.json
@@ -13,7 +13,9 @@
   ],
   "supported_features": [
       "COMPANY_SEARCH",
-      "PROVIDER_FIELD_CHECKS"
+      "PROVIDER_FIELD_CHECKS",
+      "EXTERNAL_LINK",
+      "EXTERNAL_EMBED"
   ],
   "credentials": {
     "fields": [
