--- a/static/config.one-time-sync.json
+++ b/static/config.one-time-sync.json
@@ -13,9 +13,7 @@
   ],
   "supported_features": [
       "COMPANY_SEARCH",
-      "PROVIDER_FIELD_CHECKS",
-      "EXTERNAL_LINK",
-      "EXTERNAL_EMBED"
+      "PROVIDER_FIELD_CHECKS"
   ],
   "credentials": {
     "fields": [
